2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWDatabase/GSWHTMLDynamicElement.[hm]
	  add -hasNonURLAttributes
	  add -hasURLAttributes
	  add -hasConstantAttributes
	* GSWeb/GSWRadioButtonList.m
	  handle disabled association
	  handle other associations (like id, onChange, etc)
	* GSWeb/GSWCheckBoxList.m
	  handle disabled association
	  handle other associations (like id, onChange, etc)
2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWDatabase/WODisplayGroup.m
	  add NSArray -objectsAtIndexesArray:
	  add NSArray -isEqualByObjectPointer:
	  fix -setSelectionIndexes:
2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWConstants.[hm]
	  add GSWClassName_Component
	* GSWeb/GSWComponentDefinition.m
	  fix -componentClass to use GSWClassName_Component
2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWDatabase/WODisplayGroup.m
	  respect GNUstep coding standard (curly brackets placement, indentation)
	  fix _deleteObject: (undo selectors)
	  fix _insertObjectWithObjectAndIndex: (NSAssert)
	  fix insertObject:atIndex: (undo selectors)
2014-05-22  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWAssociation.h
	  replace logTakeValue: by _logPullValue:inComponent:
	  replace logSetValue: by logPushValue:inComponent:
	* GSWeb/GSWAssociation.m
	  replace logTakeValue: by _logPullValue:inComponent:
	  replace logSetValue: by logPushValue:inComponent:
	  respect GNUstep coding standard (curly brackets placement, etc.)
	  implement -debugDescription
	* GSWeb/GSWConstantValueAssociation.m
	  replace logTakeValue: by _logPullValue:inComponent:
	  replace logSetValue: by logPushValue:inComponent:
	  fix -debugDescription
	* GSWeb/GSWKeyValueAssociation.m
	  replace logTakeValue: by _logPullValue:inComponent:
	  replace logSetValue: by logPushValue:inComponent:
	  simplify -description
	* GSWeb/GSWKeyValueAssociation.h
	  remove unneedded declarations
	* GSWeb/GSWConstantValueAssociation.m